--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./img/logo_small.png" type="image/x-icon">
 
     <!-- Google Fonts: Barlow Semi Condensed + Arvo -->
 
